--- a/src/index.css
+++ b/src/index.css
@@ -5,3 +5,9 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer base {
+  html {
+    font-family: 'Belleza', sans-serif;
+  }
+}
