--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -2,13 +2,19 @@
     display: flex;
     justify-content: space-around;
     align-items: center;
-    height: 10vh;
+    height: 12vh;
     /* border: solid 2px #fff; */
     color: var(--white);
     font-family: var(--font-urbanist);
+    border-bottom: solid 2px var(--green);
 }
 
 .logoHeader{
-    height: 60xp;
-    width: 60px;
+    height: 75px;
+    width: 75px;
+}
+
+.imgLogout{
+    height: 50px;
+    width: 50px;
 }
