--- a/src/components/neworder/neworder.css
+++ b/src/components/neworder/neworder.css
@@ -1,12 +1,41 @@
 .containerNeworder{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    height: 60vh;
     background-color: var(--gray);
     color: var(--dark);
+}
+
+.client{
+    width: 90%;
+    height: 8%;
+    margin-top: 10px;
+    text-align: center;
+    font-family: var(--font-urbanist);
+}
+
+.client::placeholder{
+    text-align: center;
+}
+
+.orderClient{
+    height: 75%;
+    width: 90%;
+    margin-top: 10px;
+    font-family: var(--font-urbanist);
 }
 
 .containerBill{
     display: flex;
     background-color: var(--dark);
     color: var(--yellow);
-    width: 80%;
-    border-radius: 5px;
+    width: 90%;
+    height: 8%;
+    align-items: center;
+    justify-content: space-around;
+}
+
+.buttonCocina{
+    margin-top: 5px;
 }
