--- a/src/components/menu/menu.css
+++ b/src/components/menu/menu.css
@@ -1,28 +1,48 @@
-.containerMenu{
-    height: 40vh;
-    width: 50vw;
-    display: flex;
-    flex-direction: column;
-    /* margin-top: 40px;
+.containerMenu {
+  height: 40vh;
+  width: 50vw;
+  display: flex;
+  flex-direction: column;
+  /* margin-top: 40px;
     margin-left: 50px; */
 }
 
-#buttonMenuH{
-    background-color: var(--yellow);
-    color: var(--white);
-
-
+.buttonCategories {
+  display: flex;
+  height: 10vh;
+  width: 40vw;
+  gap: 10px;
 }
 
-.buttonCategories{
-    height: 10vh;
-    width: 80vw;
+.buttonCategories button {
+  height: 8vh;
+  width: 16vw;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding-top: 5px;
+  border: none;
+  border-radius: 7px;
+  font-family: var(--font-urbanist);
+  font-size: 1rem;
+  color: var(--dark);
+  background-color: var(--yellow);
 }
 
-.containerProducts{
-    height: 50vh;
-    width: 40vw;
-    display: flex;
-    flex-wrap: wrap;
-    gap: 10px;
+.buttonCategories button img {
+  height: 30px;
+  width: 30px;
+}
+
+.buttonCategories button:active{
+    background-color: var(--orange);
+}
+
+.containerProducts {
+  height: 50vh;
+  width: 40vw;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 10px;
+  margin-top: 13px;
 }
