--- a/src/components/newProduct/newProduct.css
+++ b/src/components/newProduct/newProduct.css
@@ -1,7 +1,7 @@
 .containerNewProduct{
     width: 100%;
     display: flex;
-    justify-content: flex-start;
+    /* justify-content: space-around; */
 }
 
 .btn {
