estilos chooseRed para las acategorias

--- a/src/components/newProduct/newProduct.css
+++ b/src/components/newProduct/newProduct.css
@@ -1,7 +1,7 @@
 .containerNewProduct{
     width: 100%;
     display: flex;
-    /* justify-content: space-around; */
+    justify-content: space-between;
 }
 
 .btn {
