--- a/src/pages/attention/attention.css
+++ b/src/pages/attention/attention.css
@@ -42,9 +42,14 @@
     width: 30px;
   }
   
-  .buttonCategories button:focus{
+  /* .buttonCategories button.red{
       background-color: var(--orange);
       color: var(--white);
+  } */
+
+  .buttonCategories button.chooseRed{
+    background-color: var(--orange);
+    color: var(--white);
   }
   
   .containerProducts {
