--- a/src/Menu/Menu.css
+++ b/src/Menu/Menu.css
@@ -1,8 +1,3 @@
-*{
-    margin: 0;
-    padding: 0;
-}
-
 .Menu{
     height: 7vh;
     display: flex;
@@ -32,7 +27,6 @@
 
 .sect-input{
     display: flex;
-    height: 91vh;
     background-color: #797D62;
     justify-content: space-around;
 }
@@ -41,16 +35,130 @@
     margin-top: 4vh;
     width: 39vh;
     height: 4vh;
-    border-radius: 10px 10px 10px 10px;
+    border-radius: 10px;
+    border: none;
     text-align: center;
     font-weight: bold;
+}
+
+.containerMenu{
+    background-color: #797D62;
+    height: 130vh;
 }
 
 .num-mesa{
     margin-top: 4vh;
     width: 10vh;
     height: 4vh;
-    border-radius: 10px 10px 10px 10px;
+    border-radius: 10px;
+    border: none;
     text-align: center;
     font-weight: 500;
 }
+
+.menuPrincipal, .bebidas{
+    display: flex;
+    padding-left: 18vh;
+    padding-top: 2vh;   
+    color: white;
+    font-family: 'Piazzolla', serif;
+    font-size: 27px;
+    font-weight: bolder;
+}
+
+.nombreProd{
+    position: relative;
+    margin-top: 20px;
+}
+
+.nombreProducto{
+    position: relative;
+    margin-top: 20px;
+}
+
+
+.container-comidas{
+    padding: 2%;
+    display: flex;
+    width: 55%;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+    font-family: 'Piazzolla', serif;
+    font-size: 25px;
+    font-weight: bolder;   
+}
+
+.container-bebidas{
+    padding: 2%;
+    display: flex;
+    width: 58%;
+    justify-content: center;
+    font-family: 'Piazzolla', serif;
+    font-size: 25px;
+    font-weight: bolder;
+}
+
+.comidas-div, .bebidas-div{
+    display: flex;
+    border: 2px solid #825F45;
+    border-radius: 15px;
+    margin-right: 15px;
+    width: 40%;
+    text-align: center;
+    flex-direction: column;
+    margin-bottom: 15px;
+}
+
+.imgBebidas{
+    margin-top: 20px;
+    width: 120px;
+    height: 120px;
+}
+
+.signoMas{
+    position: relative;
+    width: 45px;
+    height: 45px;
+    top: 5px;
+    left: 30px;
+}
+
+.signoMenos{
+    position: relative;
+    width: 60px;
+    height: 60px;
+    bottom: 85px;
+    left: 85px;
+}
+
+.signoMasDos{
+    position: relative;
+    width: 45px;
+    height: 45px;
+    top: 10px;
+    left: 15px;
+}
+
+.signoMenosDos{
+    position: relative;
+    width: 60px;
+    height: 60px;
+    bottom: 80px;
+    left: 60px;
+}
+
+.cantidadProducto{
+    position: relative;
+    bottom: 34px;
+}
+
+.cantidadProd{
+    position: relative;
+    bottom: 38px;
+}
+
+.precio, .precioBebidas {
+    position: relative;
+    bottom: 70px;
+};
