--- a/src/pages/orders/orders.css
+++ b/src/pages/orders/orders.css
@@ -1,5 +1,5 @@
-.containerPendingReady{
-    height: 80vh;
+.orderReadyGiven{
+    height: 70vh;
     width: 90vw;
     display: grid;
     grid-template-columns: 50% 50%;
@@ -7,41 +7,34 @@
     margin-top: 40px;
     font-family: var(--font-urbanist);
     font-size: 0.8rem;
-    
 }
 
-.orderPending{
+.orderReadyOrder{
     width: 90%;
 }
 
-.orderPending h2{
+.orderReadyOrder h2{
     background-color: var(--orange);
     height: 8%;
     border-radius: 5px;
     text-align: center;
-    padding-top: 12px;
+    padding-top: 9px;
 
 }
 
-.orders div{
-    height: 90%;
-    display: flex;
-    flex-direction: column;
-    margin-top: 5px;
-    background-color: var(--gray);
-    /* align-items: center; */
-}
-
-.orderReady{
+.orderGiven{
     width: 90%;
 }
 
-.orderReady h2{
+.orderGiven h2{
     background-color: var(--green);
     height: 8%;
     border-radius: 5px;
     text-align: center;
-    padding-top: 12px;
+    padding-top: 9px;
 }
 
-
+.btnNewOrder{
+    margin-top: 10px;
+    text-align: center;
+}
