--- a/src/components/newProduct/newProduct.css
+++ b/src/components/newProduct/newProduct.css
@@ -1,10 +1,25 @@
 .containerNewProduct{
     width: 100%;
+    height: 8%;
     display: flex;
     justify-content: space-between;
+    /* background-color: var(--white); */
+    align-items: center;
+    margin-top: 5px;
+    padding: auto;
 }
 
 .btn {
-    height: 20px;
-    width: 20px;
+    height: 25px;
+    width: 25px;
+}
+
+.containerCount{
+    display: flex;
+    align-items: center;
+    /* text-align: center; */
+}
+
+.product{
+    width: 50%;
 }
