--- a/src/components/neworder/neworder.css
+++ b/src/components/neworder/neworder.css
@@ -1,65 +1,65 @@
-.containerNeworder{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    height: 60vh;
-    background-color: var(--gray);
-    color: var(--dark);
-    font-family: var(--font-urbanist);
+.containerNeworder {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  height: 65vh;
+  background-color: var(--gray);
+  color: var(--dark);
+  font-family: var(--font-urbanist);
 }
 
-.client{
-    width: 90%;
-    height: 8%;
-    margin-top: 10px;
-    text-align: center;
-    font-family: var(--font-urbanist);
+.client {
+  width: 90%;
+  height: 8%;
+  margin-top: 10px;
+  text-align: center;
+  font-family: var(--font-urbanist);
 }
 
-.client::placeholder{
-    text-align: center;
+.client::placeholder {
+  text-align: center;
 }
 
-#messageClient{
-    color:var(--orange);
-    font-size: 0.8rem;
+#messageClient {
+  color: var(--orange);
+  font-size: 0.8rem;
 }
 
-
-.orderClient{
-    height: 70%;
-    width: 90%;
-    /* margin-top: 10px; */
-
+.orderClient {
+  height: 70%;
+  width: 90%;
+  /* margin-top: 10px; */
 }
 
-.messageOrderClient{
-    padding-top: 30%;
-    text-align: center;
-    color: #A09E9E;    
+.messageOrderClient {
+  padding-top: 30%;
+  text-align: center;
+  color: #a09e9e;
 }
 
-
-.headerNewProduct{
-    height: 5%;
-    width: 90%;
-    margin-top: 10px;
-    display:flex;
-    justify-content: space-around;
-
+.headerNewProduct {
+  height: 5%;
+  width: 90%;
+  margin-top: 10px;
+  display: flex;
+  justify-content: space-between;
 }
 
-.containerBill{
-    display: flex;
-    background-color: var(--dark);
-    color: var(--yellow);
-    width: 90%;
-    height: 8%;
-    align-items: center;
-    justify-content: space-around;
+.subtotalH{
+    margin-right: 40px;
 }
 
-.buttonCocina{
-    margin-top: 5px;
-    margin-left: 300px;
+.containerBill {
+  display: flex;
+  background-color: var(--dark);
+  color: var(--yellow);
+  width: 90%;
+  height: 8%;
+  align-items: center;
+  justify-content: space-around;
+}
+
+.buttonCocina {
+  margin-top: 5px;
+  margin-left: 300px;
 }
