logre renderizar los pedidos segun el estado de pedido en tiempo real

--- a/src/components/readyOrder/readyOrder.css
+++ b/src/components/readyOrder/readyOrder.css
@@ -1,3 +1,11 @@
 .containerReadyOrder{
     color: var(--dark);
 }
+
+.buttonOkReady{
+    display: none;
+}
+
+.buttonOkReady-Attention{
+    display: block;
+}
