--- a/src/components/deliveryOrder/deliveryOrder.css
+++ b/src/components/deliveryOrder/deliveryOrder.css
@@ -1,21 +1,17 @@
-.containerPendingOrder{
+.containerdeliveryOrder{
     width: 90%;
     /* height: 30%;  */
     display: flex;
     flex-direction: column;
     color: var(--dark);  
     /* justify-content: center;  */
-    /* border: 2px solid green; */
+    /* border: 2px solid blue; */
     background-color: #D9D9D9;
     border-radius: 5px;
     margin-top: 5px;
     padding: 25px;
     font-family: var(--font-urbanist);
-}
-
-.containerPendingOrder{
-    display: flex;
-    justify-content: space-around;
+    margin-left: 20px;
 }
 
 .divPedido{
@@ -30,21 +26,9 @@
     flex-direction: column;
 }
 
-.containerTimerButton{
+/* .containerTimerButton{
     display: flex;
     justify-content: space-between;
     align-items: center;
     width: 90%;
-}
-
-.buttonOk{
-    height: 35px;
-    width: 55px;
-    font-size: 1rem;
-    background-color: var(--orange);
-    border: none;
-    border-radius: 5px;
-    color: var(--gray);
-    margin-right: -30px;
-
-}
+} */
