--- a/src/components/readyOrder/readyOrder.css
+++ b/src/components/readyOrder/readyOrder.css
@@ -1,5 +1,41 @@
 .containerReadyOrder{
-    color: var(--dark);
+    width: 90%;
+    /* height: 30%;  */
+    display: flex;
+    flex-direction: column;
+    color: var(--dark);  
+    /* justify-content: center;  */
+    /* border: 2px solid blue; */
+    background-color: #D9D9D9;
+    border-radius: 5px;
+    margin-top: 5px;
+    padding: 25px;
+    font-family: var(--font-urbanist);
+}
+
+/* .containerReadyOrder{
+    display: flex;
+    justify-content: space-around;
+} */
+
+.divPedido{
+    display: flex;
+    flex-direction: column;
+    width: 90%;
+    /* border: 2px solid yellow; */
+}
+
+.divOrder{
+    display: flex; 
+    /* border: 2px solid green; */
+    flex-direction: column;
+}
+
+.containerTimerButton{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 90%;
 }
 
 .buttonOkReady{
@@ -8,4 +44,12 @@
 
 .buttonOkReady-Attention{
     display: block;
+    height: 35px;
+    width: 55px;
+    font-size: 1rem;
+    background-color: var(--orange);
+    border: none;
+    border-radius: 5px;
+    color: var(--gray);
+    margin-right: -30px;
 }
