--- a/src/pages/orders/orders.css
+++ b/src/pages/orders/orders.css
@@ -22,6 +22,18 @@
 
 }
 
+.divOrdersGiven{
+    display: flex;
+    /* align-items: center; */
+    height: 90%;
+    display: flex;
+    flex-direction: column;
+    margin-top: 5px;
+    background-color: var(--gray);
+    /* border: 2px solid red; */
+    
+}
+
 .orderGiven{
     width: 90%;
 }
