Se termina la primera vista de la app

--- a/src/Menu/Menu.css
+++ b/src/Menu/Menu.css
@@ -1,4 +1,4 @@
-.Menu{
+.Menu {
     height: 7vh;
     display: flex;
     background-color: #825F45;
@@ -6,14 +6,15 @@
     line-height: 1.5em;
 }
 
-.logoLasañaMenu{
+.logoLasañaMenu {
     position: relative;
     width: 100px;
     height: 100px;
     bottom: 4px;
 }
 
-.opcionInicio, .opcionPedidos{
+.opcionInicio,
+.opcionPedidos {
     padding: 40px;
     display: flex;
     position: relative;
@@ -25,13 +26,13 @@
     text-decoration: none;
 }
 
-.sect-input{
+.sect-input {
     display: flex;
     background-color: #797D62;
     justify-content: space-around;
 }
 
-.input-name{
+.input-name {
     margin-top: 4vh;
     width: 39vh;
     height: 4vh;
@@ -41,12 +42,12 @@
     font-weight: bold;
 }
 
-.containerMenu{
+.containerMenu {
     background-color: #797D62;
-    height: 135vh;
+    height: 140vh;
 }
 
-.num-mesa{
+.num-mesa {
     margin-top: 4vh;
     width: 10vh;
     height: 4vh;
@@ -56,28 +57,29 @@
     font-weight: 500;
 }
 
-.menuPrincipal, .bebidas{
+.menuPrincipal,
+.bebidas {
     display: flex;
     padding-left: 18vh;
-    padding-top: 2vh;   
+    padding-top: 2vh;
     color: white;
     font-family: 'Piazzolla', serif;
     font-size: 27px;
     font-weight: bolder;
 }
 
-.nombreProd{
+.nombreProd {
     position: relative;
     margin-top: 20px;
 }
 
-.nombreProducto{
+.nombreProducto {
     position: relative;
     margin-top: 20px;
 }
 
 
-.container-comidas{
+.container-comidas {
     padding: 2%;
     display: flex;
     width: 55%;
@@ -86,10 +88,10 @@
     justify-content: center;
     font-family: 'Piazzolla', serif;
     font-size: 25px;
-    font-weight: bolder;   
+    font-weight: bolder;
 }
 
-.container-bebidas{
+.container-bebidas {
     padding: 2%;
     display: flex;
     width: 58%;
@@ -99,7 +101,8 @@
     font-weight: bolder;
 }
 
-.comidas-div, .bebidas-div{
+.comidas-div,
+.bebidas-div {
     display: flex;
     border: 2px solid #825F45;
     border-radius: 15px;
@@ -110,21 +113,22 @@
     margin-bottom: 15px;
 }
 
-.imgBebidas{
+.imgBebidas {
     margin-top: 20px;
     width: 120px;
     height: 120px;
 }
 
-.signoMas{
+.signoMas {
     position: relative;
     width: 45px;
     height: 45px;
     bottom: 7.3vh;
-    right: 3vh;;
+    right: 3vh;
+    ;
 }
 
-.signoMenos{
+.signoMenos {
     position: relative;
     width: 60px;
     height: 60px;
@@ -132,17 +136,81 @@
     top: 20.9px;
 }
 
-.cantidadProducto{
+.cantidadProducto {
     position: relative;
-    bottom: 34px;
+    bottom: 37px;
 }
 
-.cantidadProd{
-    position: relative;
-    bottom: 38px;
-}
-
-.precio, .precioBebidas {
+.precio,
+.precioBebidas {
     position: relative;
     bottom: 70px;
-};
+}
+
+;
+
+.cancelar {
+    position: relative;
+}
+
+.order-summary {
+    position: absolute;
+    bottom: 32vh;
+    border-radius: 10px;
+    width: 31.5vh;
+    left: 42vh;
+    height: 45vh;
+    border: 3px solid #825F45;
+}
+
+.total-order-price {
+    text-align: right;
+    margin-right: 15px;
+    color: white;
+    font-family: 'Piazzolla', serif;
+    font-style: normal;
+    line-height: 28px;
+    font-size: 18px;
+    font-weight: 100;
+}
+
+.res-ped {
+    color: white;
+    font-family: 'Piazzolla', serif;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 28px;
+    text-align: center;
+    margin-top: 1vh;
+}
+
+.product-summary {
+    display: flex;
+    justify-content: space-between;
+    margin: 15px;
+}
+
+.delete-order, .btn-save-order{
+    position: relative;
+    top: 34vh;
+    left: 8vh;
+    width: 14vh;
+    height: 4vh;
+    background: #997B66;
+    color: white;
+    border-radius: 15px;
+    border: none;
+    font-family: 'Piazzolla', serif;
+    font-style: normal;
+    font-weight: 800;
+    font-size: 20px;
+    text-align: center; 
+}
+
+.btn-save-order{
+    width: 30vh;
+    height: 5vh;
+    left: 21vh;
+    top: 1vh;
+}
