--- a/src/components/deliveryOrder/deliveryOrder.css
+++ b/src/components/deliveryOrder/deliveryOrder.css
@@ -1,29 +1,29 @@
-.containerdeliveryOrder{
-    width: 90%;
-    /* height: 30%;  */
-    display: flex;
-    flex-direction: column;
-    color: var(--dark);  
-    /* justify-content: center;  */
-    /* border: 2px solid blue; */
-    background-color: #D9D9D9;
-    border-radius: 5px;
-    margin-top: 5px;
-    padding: 25px;
-    font-family: var(--font-urbanist);
-    margin-left: 20px;
+.containerdeliveryOrder {
+  width: 90%;
+  /* height: 30%;  */
+  display: flex;
+  flex-direction: column;
+  color: var(--dark);
+  /* justify-content: center;  */
+  /* border: 2px solid blue; */
+  background-color: #d9d9d9;
+  border-radius: 5px;
+  margin-top: 5px;
+  padding: 25px;
+  font-family: var(--font-urbanist);
+  margin-left: 20px;
 }
 
-.divPedido{
-    display: flex;
-    flex-direction: column;
-    width: 90%;
+.divPedido {
+  display: flex;
+  flex-direction: column;
+  width: 90%;
 }
 
-.divOrder{
-    display: flex; 
-    /* border: 2px solid green; */
-    flex-direction: column;
+.divOrder {
+  display: flex;
+  /* border: 2px solid green; */
+  flex-direction: column;
 }
 
 /* .containerTimerButton{
