--- a/src/components/pendingorder/pendingOrder.css
+++ b/src/components/pendingorder/pendingOrder.css
@@ -13,6 +13,12 @@
   font-family: var(--font-urbanist);
 }
 
+.headerOrderPending{
+  display: flex;
+  justify-content: space-between;
+
+}
+
 .containerPendingOrder {
   display: flex;
   justify-content: space-around;
